--- a/blog.html
+++ b/blog.html
@@ -12,6 +12,9 @@
 <link href="css/jcarousel.css" rel="stylesheet" />
 <link href="css/flexslider.css" rel="stylesheet" />
 <link href="css/style.css" rel="stylesheet" />
+<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 
 
 <!-- Theme skin -->
@@ -39,13 +42,13 @@
                 </div>
                 <div class="navbar-collapse collapse ">
                     <ul class="nav navbar-nav">
-                        <li><a href="index.html">Home</a></li>
-                        <li class="dropdown ">
+                        <li><a href="index.html">Home<i class="fa fa-camera-retro"></i></span></a></li>
+                        <li class="dropdown">
                             <a href="#" class="dropdown-toggle " data-toggle="dropdown" data-hover="dropdown" data-delay="0" data-close-others="false">Features <b class=" icon-angle-down"></b></a>
                             <ul class="dropdown-menu">
-                                <li><a href="typography.html">Typography</a></li>
-                                <li><a href="components.html">Components</a></li>
-								<li><a href="pricingbox.html">Pricing box</a></li>
+								<li><a href="https://github.com/tekitoufuki-K" target="_blank">Github</a></li>
+								<li><a href="https://medium.com/@zaking" target="_blank">Medium<i class="fa fa-medium"></i></a></li>
+								<li><a href="https://instagram.com/zaking_t/">Instagram<i class="fa fa-instagram"></i></a></li>
                             </ul>
                         </li>
                         <li><a href="portfolio.html">Portfolio</a></li>
@@ -236,7 +239,7 @@
 	</div>
 	</section>
 	<footer>
-	<div class="container">
+	<!-- <div class="container">
 		<div class="row">
 			<div class="col-lg-3">
 				<div class="widget">
@@ -284,7 +287,7 @@
 				</div>
 			</div>
 		</div>
-	</div>
+	</div> -->
 	<div id="sub-footer">
 		<div class="container">
 			<div class="row">
@@ -295,13 +298,12 @@
 						</p>
 					</div>
 				</div>
-				<div class="col-lg-6">
+				div class="col-lg-6">
 					<ul class="social-network">
-						<li><a href="#" data-placement="top" title="Facebook"><i class="fa fa-facebook"></i></a></li>
-						<li><a href="#" data-placement="top" title="Twitter"><i class="fa fa-twitter"></i></a></li>
-						<li><a href="#" data-placement="top" title="Linkedin"><i class="fa fa-linkedin"></i></a></li>
-						<li><a href="#" data-placement="top" title="Pinterest"><i class="fa fa-pinterest"></i></a></li>
-						<li><a href="#" data-placement="top" title="Google plus"><i class="fa fa-google-plus"></i></a></li>
+						<li><a href="https://www.facebook.com/tsukazaki.kohei" target="_blank" data-placement="top" title="Facebook"><i class="fa fa-facebook"></i></a></li>
+						<li><a href="https://twitter.com/kou_zaking?lang=ja" target="_blank" data-placement="top" title="Twitter"><i class="fa fa-twitter"></i></a></li>
+						<li><a href="https://www.linkedin.com/pub/kohei-pat-tsukazaki/69/427/aa2" target="_blank" data-placement="top" title="Linkedin"><i class="fa fa-linkedin"></i></a></li>
+						<li><a href="https://instagram.com/zaking_t/" target="_blank" data-placement="top" title="Instagram"><i class="fa fa-instagram"></i></a></li>
 					</ul>
 				</div>
 			</div>
