--- a/portfolio.html
+++ b/portfolio.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>Moderna - Bootstrap 3 flat corporate template</title>
+<title>ZAKING SITE</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <meta name="description" content="" />
 <meta name="author" content="http://bootstraptaste.com" />
@@ -12,6 +12,9 @@
 <link href="css/jcarousel.css" rel="stylesheet" />
 <link href="css/flexslider.css" rel="stylesheet" />
 <link href="css/style.css" rel="stylesheet" />
+<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 
 
 <!-- Theme skin -->
@@ -36,22 +39,22 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="index.html"><span>M</span>oderna</a>
+                    <a class="navbar-brand" href="index.html"><span>Tsukazaki</span>Kohei</a>
                 </div>
                 <div class="navbar-collapse collapse ">
                     <ul class="nav navbar-nav">
-                        <li><a href="index.html">Home</a></li>
-                        <li class="dropdown ">
-                            <a href="#" class="dropdown-toggle " data-toggle="dropdown" data-hover="dropdown" data-delay="0" data-close-others="false">Features <b class=" icon-angle-down"></b></a>
+                        <li><a href="index.html">Home<i class="fa fa-camera-retro"></i></a></li>
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle " data-toggle="dropdown" data-hover="dropdown" data-delay="0" data-close-others="false">Features<i class="fa fa-cube"></i> <b class=" icon-angle-down"></b></a>
                             <ul class="dropdown-menu">
-                                <li><a href="typography.html">Typography</a></li>
-                                <li><a href="components.html">Components</a></li>
-								<li><a href="pricingbox.html">Pricing box</a></li>
+								<li><a href="https://github.com/tekitoufuki-K" target="_blank">Github<i class="fa fa-github"></i></a></li>
+								<li><a href="https://medium.com/@zaking" target="_blank">Medium<i class="fa fa-medium"></i></a></li>
+								<li><a href="https://instagram.com/zaking_t/" target="_blank">Instagram<i class="fa fa-instagram"></i></a></li>
                             </ul>
                         </li>
-                        <li class="active"><a href="portfolio.html">Portfolio</a></li>
-                        <li><a href="blog.html">Blog</a></li>
-                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="portfolio.html">Portfolio</a></li>
+                        <li><a href="http://zaking-k.hatenablog.com/" target="_blank">Blog<i class="fa fa-child"></i></a></li>
+                        <li><a href="contact.html">Contact<i class="fa fa-envelope"></i></a></li>
                     </ul>
                 </div>
             </div>
@@ -180,7 +183,7 @@
 	</div>
 	</section>
 	<footer>
-	<div class="container">
+	<!-- <div class="container">
 		<div class="row">
 			<div class="col-lg-3">
 				<div class="widget">
@@ -228,24 +231,23 @@
 				</div>
 			</div>
 		</div>
-	</div>
+	</div> -->
 	<div id="sub-footer">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-6">
 					<div class="copyright">
 						<p>
-							<span>&copy; Moderna 2014 All right reserved. By </span><a href="http://bootstraptaste.com" target="_blank">Bootstraptaste</a>
+							<span>&copy; zaking's site 2015 All right reserved. By </span><a href="http://bootstraptaste.com" target="_blank">Tsukazaki Kohei</a>
 						</p>
 					</div>
 				</div>
 				<div class="col-lg-6">
 					<ul class="social-network">
-						<li><a href="#" data-placement="top" title="Facebook"><i class="fa fa-facebook"></i></a></li>
-						<li><a href="#" data-placement="top" title="Twitter"><i class="fa fa-twitter"></i></a></li>
-						<li><a href="#" data-placement="top" title="Linkedin"><i class="fa fa-linkedin"></i></a></li>
-						<li><a href="#" data-placement="top" title="Pinterest"><i class="fa fa-pinterest"></i></a></li>
-						<li><a href="#" data-placement="top" title="Google plus"><i class="fa fa-google-plus"></i></a></li>
+						<li><a href="https://www.facebook.com/tsukazaki.kohei" target="_blank" data-placement="top" title="Facebook"><i class="fa fa-facebook"></i></a></li>
+						<li><a href="https://twitter.com/kou_zaking?lang=ja" target="_blank" data-placement="top" title="Twitter"><i class="fa fa-twitter"></i></a></li>
+						<li><a href="https://www.linkedin.com/pub/kohei-pat-tsukazaki/69/427/aa2" target="_blank" data-placement="top" title="Linkedin"><i class="fa fa-linkedin"></i></a></li>
+						<li><a href="https://instagram.com/zaking_t/" target="_blank" data-placement="top" title="Instagram"><i class="fa fa-instagram"></i></a></li>
 					</ul>
 				</div>
 			</div>
