--- a/components.html
+++ b/components.html
@@ -336,7 +336,7 @@
 				<div class="col-lg-6">
 					<div class="copyright">
 						<p>
-							<span>&copy;  Tsukazaki Kohei 2015 All right reserved. By </span><a href="http://bootstraptaste.com" target="_blank">Bootstraptaste</a>
+							<span>&copy;  Tsukazaki Kohei 2015 All right reserved. By </span><a href="https://www.facebook.com/tsukazaki.kohei" target="_blank">Bootstraptaste</a>
 						</p>
 					</div>
 				</div>
