--- a/pricingbox.html
+++ b/pricingbox.html
@@ -304,7 +304,7 @@
 				<div class="col-lg-6">
 					<div class="copyright">
 						<p>
-							<span>&copy; Moderna 2014 All right reserved. By </span><a href="http://bootstraptaste.com" target="_blank">Bootstraptaste</a>
+							<span>&copy; Moderna 2014 All right reserved. By </span><a href="https://www.facebook.com/tsukazaki.kohei" target="_blank">Bootstraptaste</a>
 						</p>
 					</div>
 				</div>
