--- a/contact.html
+++ b/contact.html
@@ -172,7 +172,7 @@
 				<div class="col-lg-6">
 					<div class="copyright">
 						<p>
-							<span>&copy; Moderna 2014 All right reserved. By </span><a href="https://www.facebook.com/tsukazaki.kohei" target="_blank">Bootstraptaste</a>
+							<span>&copy; zaking site 2015 All right reserved. By </span><a href="https://www.facebook.com/tsukazaki.kohei" target="_blank">Tsukazaki Kohei</a>
 						</p>
 					</div>
 				</div>
