--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
 				<div class="col-lg-6">
 					<div class="copyright">
 						<p>
-							<span>&copy; zaking's site 2015 All right reserved. By </span><a href="https://www.facebook.com/tsukazaki.kohei" target="_blank">Tsukazaki Kohei</a>
+							<span>&copy; zaking site 2015 All right reserved. By </span><a href="https://www.facebook.com/tsukazaki.kohei" target="_blank">Tsukazaki Kohei</a>
 						</p>
 					</div>
 				</div>
