--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>Moderna - Bootstrap 3 flat corporate template</title>
+<title>ZAKING SITE</title>
+<link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon">
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <meta name="description" content="" />
 <meta name="author" content="http://bootstraptaste.com" />
@@ -38,7 +39,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="index.html"><span>M</span>oderna</a>
+                    <a class="navbar-brand" href="index.html"><span>TSUKAZAKI</span>KOHEI</a>
                 </div>
                 <div class="navbar-collapse collapse ">
                     <ul class="nav navbar-nav">
@@ -53,7 +54,7 @@
                         </li>
                         <li><a href="portfolio.html">Portfolio</a></li>
                         <li><a href="blog.html">Blog</a></li>
-                        <li class="active"><a href="contact.html">Contact</a></li>
+                        <li class="active"><a href="contact.html">Contact<i class="fa fa-envelope"></i></a></li>
                     </ul>
                 </div>
             </div>
@@ -74,8 +75,7 @@
 	</section>
 	<section id="content">
 	<div class="map">
-		<iframe src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=Kuningan,+Jakarta+Capital+Region,+Indonesia&amp;aq=3&amp;oq=kuningan+&amp;sll=37.0625,-95.677068&amp;sspn=37.410045,86.572266&amp;ie=UTF8&amp;hq=&amp;hnear=Kuningan&amp;t=m&amp;z=14&amp;ll=-6.238824,106.830177&amp;output=embed">
-		</iframe>
+		<iframe width="600" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=2322%20Walsh%20Court%2C%20San%20Jose%2C%20Santa%20Clara%2C%20CA%2C%20United%20States&key=AIzaSyBN42c5XCOz8iTnvPwdj0pITJo92FM0Crc" allowfullscreen></iframe>
 	</div>
 	<div class="container">
 		<div class="row">
