--- a/contact.html
+++ b/contact.html
@@ -75,7 +75,9 @@
 	</section>
 	<section id="content">
 	<div class="map">
-		<iframe width="600" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=2322%20Walsh%20Court%2C%20San%20Jose%2C%20Santa%20Clara%2C%20CA%2C%20United%20States&key=AIzaSyBN42c5XCOz8iTnvPwdj0pITJo92FM0Crc" allowfullscreen></iframe>
+		<!-- <iframe src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=Kuningan,+Jakarta+Capital+Region,+Indonesia&amp;aq=3&amp;oq=kuningan+&amp;sll=37.0625,-95.677068&amp;sspn=37.410045,86.572266&amp;ie=UTF8&amp;hq=&amp;hnear=Kuningan&amp;t=m&amp;z=14&amp;ll=-6.238824,106.830177&amp;output=embed">
+		</iframe> -->
+		<iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=2322%20Walsh%20Court%2C%20San%20Jose%2C%20Santa%20Clara%2C%20CA%2C%20United%20States&key=AIzaSyBN42c5XCOz8iTnvPwdj0pITJo92FM0Crc" allowfullscreen></iframe>
 	</div>
 	<div class="container">
 		<div class="row">
