--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,7 @@
                             </ul>
                         </li>
                         <li><a href="portfolio.html">Portfolio</a></li>
-                        <li><a href="blog.html">Blog</a></li>
+                        <li><a href="http://zaking-k.hatenablog.com/">Blog</a></li>
                         <li class="active"><a href="contact.html">Contact<i class="fa fa-envelope"></i></a></li>
                     </ul>
                 </div>
