change text of protfolio

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 								</div>
 							</div>
 							<div class="box-bottom">
-								<a href="https://www.facebook.com/tsukazaki.kohei">Learn more</a>
+								<a href="https://www.facebook.com/tsukazaki.kohei">Check</a>
 							</div>
 						</div>
 					</div>
@@ -142,7 +142,7 @@
 								</div>
 							</div>
 							<div class="box-bottom">
-								<a href="https://twitter.com/kou_zaking?lang=ja">Learn more</a>
+								<a href="https://twitter.com/kou_zaking?lang=ja">Check</a>
 							</div>
 						</div>
 					</div>
@@ -155,7 +155,7 @@
 								</div>
 							</div>
 							<div class="box-bottom">
-								<a href="https://instagram.com/zaking_t/">Learn more</a>
+								<a href="https://instagram.com/zaking_t/">Check</a>
 							</div>
 						</div>
 					</div>
@@ -168,7 +168,7 @@
 								</div>
 							</div>
 							<div class="box-bottom">
-								<a href="https://www.linkedin.com/pub/kohei-pat-tsukazaki/69/427/aa2">Learn more</a>
+								<a href="https://www.linkedin.com/pub/kohei-pat-tsukazaki/69/427/aa2">Check</a>
 							</div>
 						</div>
 					</div>
@@ -199,7 +199,8 @@
 						<span class="overlay-img-thumb font-icon-plus"></span>
 						</a>
 						<!-- Thumb Image and Description -->
-						<img src="img/works/1.jpg" alt="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus quis elementum odio. Curabitur pellentesque, dolor vel pharetra mollis.">
+						<!-- ここにワークの詳細を乗せる -->
+						<img src="img/works/1.jpg" alt="">
 						</div>
 						</li>
 						<!-- End Item Project -->
@@ -211,7 +212,8 @@
 						<span class="overlay-img-thumb font-icon-plus"></span>
 						</a>
 						<!-- Thumb Image and Description -->
-						<img src="img/works/2.jpg" alt="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus quis elementum odio. Curabitur pellentesque, dolor vel pharetra mollis.">
+						<!-- ここにワークの詳細を乗せる -->
+						<img src="img/works/2.jpg" alt="">
 						</li>
 						<!-- End Item Project -->
 						<!-- Item Project and Filter Name -->
@@ -222,7 +224,8 @@
 						<span class="overlay-img-thumb font-icon-plus"></span>
 						</a>
 						<!-- Thumb Image and Description -->
-						<img src="img/works/3.jpg" alt="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus quis elementum odio. Curabitur pellentesque, dolor vel pharetra mollis.">
+						<!-- ここにワークの詳細を乗せる -->
+						<img src="img/works/3.jpg" alt="">
 						</li>
 						<!-- End Item Project -->
 						<!-- Item Project and Filter Name -->
@@ -233,7 +236,8 @@
 						<span class="overlay-img-thumb font-icon-plus"></span>
 						</a>
 						<!-- Thumb Image and Description -->
-						<img src="img/works/4.jpg" alt="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus quis elementum odio. Curabitur pellentesque, dolor vel pharetra mollis.">
+						<!-- ここにワークの詳細を乗せる -->
+						<img src="img/works/4.jpg" alt="">
 						</li>
 						<!-- End Item Project -->
 					</ul>
