change top image

--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
                     </button>
                     <a class="navbar-brand" href="index.html"><span>TSUKAZAKI</span>KOHEI</a>
                 </div>
-                <div class="navbar-collapse collapse ">
+                <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
                         <li><a href="index.html">Home<i class="fa fa-camera-retro"></i></a></li>
                         <li class="dropdown">
@@ -77,97 +77,31 @@
 	<div class="map">
 		<!-- <iframe src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=Kuningan,+Jakarta+Capital+Region,+Indonesia&amp;aq=3&amp;oq=kuningan+&amp;sll=37.0625,-95.677068&amp;sspn=37.410045,86.572266&amp;ie=UTF8&amp;hq=&amp;hnear=Kuningan&amp;t=m&amp;z=14&amp;ll=-6.238824,106.830177&amp;output=embed">
 		</iframe> -->
-		<iframe width="600" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=2322%20Walsh%20Court%2C%20San%20Jose%2C%20Santa%20Clara%2C%20CA%2C%20United%20States&key=AIzaSyBN42c5XCOz8iTnvPwdj0pITJo92FM0Crc" allowfullscreen></iframe>
-	</div>
-	<div class="container">
-		<div class="row">
-			<div class="col-lg-12">
-				<h4>Get in touch with us by filling <strong>contact form below</strong></h4>
-				<form id="contactform" action="contact/contact.php" method="post" class="validateform" name="send-contact">
-					<div id="sendmessage">
-						 Your message has been sent. Thank you!
-					</div>
-					<div class="row">
-						<div class="col-lg-4 field">
-							<input type="text" name="name" placeholder="* Enter your full name" data-rule="maxlen:4" data-msg="Please enter at least 4 chars" />
-							<div class="validation">
-							</div>
-						</div>
-						<div class="col-lg-4 field">
-							<input type="text" name="email" placeholder="* Enter your email address" data-rule="email" data-msg="Please enter a valid email" />
-							<div class="validation">
-							</div>
-						</div>
-						<div class="col-lg-4 field">
-							<input type="text" name="subject" placeholder="Enter your subject" data-rule="maxlen:4" data-msg="Please enter at least 4 chars" />
-							<div class="validation">
-							</div>
-						</div>
-						<div class="col-lg-12 margintop10 field">
-							<textarea rows="12" name="message" class="input-block-level" placeholder="* Your message here..." data-rule="required" data-msg="Please write something"></textarea>
-							<div class="validation">
-							</div>
-							<p>
-								<button class="btn btn-theme margintop10 pull-left" type="submit">Submit message</button>
-								<span class="pull-right margintop20">* Please fill all required form field, thanks!</span>
-							</p>
-						</div>
-					</div>
-				</form>
-			</div>
-		</div>
-	</div>
-	</section>
-	<footer>
-	<!-- <div class="container">
-		<div class="row">
-			<div class="col-lg-3">
-				<div class="widget">
-					<h5 class="widgetheading">Get in touch with us</h5>
-					<address>
-					<strong>Moderna company Inc</strong><br>
-					 Modernbuilding suite V124, AB 01<br>
-					 Someplace 16425 Earth </address>
-					<p>
-						<i class="icon-phone"></i> (123) 456-7890 - (123) 555-7891 <br>
-						<i class="icon-envelope-alt"></i> email@domainname.com
-					</p>
+<!-- 		<iframe width="600" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=2322%20Walsh%20Court%2C%20San%20Jose%2C%20Santa%20Clara%2C%20CA%2C%20United%20States&key=AIzaSyBN42c5XCOz8iTnvPwdj0pITJo92FM0Crc" allowfullscreen></iframe>
+ -->	</div>
+ 	<center>
+	<p><img src="kohei2.png" alt="写真" title="profile_photo" width="193" height="130" border="0"></p>
+	<h5>Kohei Tsukazaki</h5>
+	<h6><i class="fa fa-envelope"></i>zaking331@gmail.com</h6>
+	<div class="about-bios">	
+		
+		<div class="charlotte-bio fl">
+			<div class="about-charlotte-image-name">
+			<div class=""></div>
+				<div class="work-title">Embedded software engineer</div>
+				<div class="see-portfolio">
+					See my <a href="portfolio.html" target="blank">Portfolio</a>
 				</div>
-			</div>
-			<div class="col-lg-3">
-				<div class="widget">
-					<h5 class="widgetheading">Pages</h5>
-					<ul class="link-list">
-						<li><a href="#">Press release</a></li>
-						<li><a href="#">Terms and conditions</a></li>
-						<li><a href="#">Privacy policy</a></li>
-						<li><a href="#">Career center</a></li>
-						<li><a href="#">Contact us</a></li>
-					</ul>
-				</div>
-			</div>
-			<div class="col-lg-3">
-				<div class="widget">
-					<h5 class="widgetheading">Latest posts</h5>
-					<ul class="link-list">
-						<li><a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</a></li>
-						<li><a href="#">Pellentesque et pulvinar enim. Quisque at tempor ligula</a></li>
-						<li><a href="#">Natus error sit voluptatem accusantium doloremque</a></li>
-					</ul>
-				</div>
-			</div>
-			<div class="col-lg-3">
-				<div class="widget">
-					<h5 class="widgetheading">Flickr photostream</h5>
-					<div class="flickr_badge">
-						<script type="text/javascript" src="http://www.flickr.com/badge_code_v2.gne?count=8&amp;display=random&amp;size=s&amp;layout=x&amp;source=user&amp;user=34178660@N03"></script>
-					</div>
-					<div class="clear">
-					</div>
+				<hr>
+				<div class="bio-copy">
+					Hi, I’m Kohei.
+					I’m passionate about new technology which can change the world. 
+					I'm a Brogrammer and technology aficionado, lover of things DIY,Foodie.<br><a href="https://twitter.com/kou_zaking"><i class="fa fa-twitter"></i>@kou_zaking</a><br>
 				</div>
 			</div>
 		</div>
-	</div> -->
+	</div>
+	</center>	
 	<div id="sub-footer">
 		<div class="container">
 			<div class="row">
@@ -191,7 +125,7 @@
 	</div>
 	</footer>
 </div>
-<a href="#" class="scrollup"><i class="fa fa-angle-up active"></i></a>
+<a href="#" class="scrollup"><i class="fa fa-angle-up active"></i><v/a>
 <!-- javascript
     ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
