--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <div id="main-slider" class="flexslider">
             <ul class="slides">
               <li>
-                <img src="img/slides/1.jpg" alt="" />
+                <img src="img/slides/tech.jpg" alt="" />
                 <!-- <div class="flex-caption">
                     <h3>Modern Design</h3> 
 					<p>Duis fermentum auctor ligula ac malesuada. Mauris et metus odio, in pulvinar urna</p> 
@@ -77,7 +77,7 @@
                 </div> -->
               </li>
               <li>
-                <img src="img/slides/2.jpg" alt="" />
+                <img src="img/slides/iphone.jpg" alt="" />
                 <!-- <div class="flex-caption">
                     <h3>Fully Responsive</h3> 
 					<p>Sodales neque vitae justo sollicitudin aliquet sit amet diam curabitur sed fermentum.</p> 
@@ -85,7 +85,7 @@
                 </div> -->
               </li>
               <li>
-                <img src="img/slides/3.jpg" alt="" />
+                <img src="img/slides/mac.png" alt="" />
                 <!-- <div class="flex-caption">
                     <h3>Clean & Fast</h3> 
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit donec mer lacinia.</p> 
